add getAllIngredients method
